--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -1222,6 +1222,56 @@ SELECT {
 {english:"plan", spanish:"plan (m)",englishPhrase:"we have a new plan", spanishPhrase:"tenemos un nuevo plan",module:"module 20",type:"words"},
 {english:"to demonstrate", spanish:"demostrar",englishPhrase:"I'm going to demonstrate how to do it", spanishPhrase:"voy a demostrar cómo hacerlo",module:"module 20",type:"words"},
 {english:"space", spanish:"espacio (m)",englishPhrase:"I need more space to be comfortable", spanishPhrase:"necesito más expacio para estar cómodo/a",module:"module 20",type:"words"},
+{english:"pain", spanish:"dolor (m)",englishPhrase:"the pain was unbearable", spanishPhrase:"el dolor fue insoportable",module:"module 21",type:"words"},
+{english:"police, police officer", spanish:"policía (f)",englishPhrase:"they're going to call the police", spanishPhrase:"van a llamar a la policía",module:"module 21",type:"words"},
+{english:"to survive", spanish:"sobrevivir",englishPhrase:"I know enough spanish to survive", spanishPhrase:"sé suficiente español para sobrevivir",module:"module 21",type:"words"},
+{english:"odor, smell", spanish:"olor (m)",englishPhrase:"I love the smell of coffee", spanishPhrase:"me encanta el olor del café",module:"module 21",type:"words"},
+{english:"pride", spanish:"orgullo (m)",englishPhrase:"his pride is his weakness", spanishPhrase:"su orgullo es su debilidad",module:"module 21",type:"words"},
+{english:"dance", spanish:"baile (m)",englishPhrase:"it's the typical dance of this region", spanishPhrase:"es el baile tipico de esta región",module:"module 21",type:"words"},
+{english:"worse, worst one", spanish:"peor, el peor",englishPhrase:"it's the worst one", spanishPhrase:"es el peor",module:"module 21",type:"words"},
+{english:"to sign", spanish:"firmar",englishPhrase:"they want you to sign here", spanishPhrase:"quieren que firmes aquí",module:"module 21",type:"words"},
+{english:"note", spanish:"nota (f)",englishPhrase:"I left him a note at home", spanishPhrase:"le dejé una nota en casa",module:"module 21",type:"words"},
+{english:"joke, funny story", spanish:"chiste (m) broma (f)",englishPhrase:"relax, it was just a joke", spanishPhrase:"relájate, sólo era un chiste",module:"module 21",type:"words"},
+{english:"battery (phone, car)", spanish:"batería (f)",englishPhrase:"the battery in my phone is dead", spanishPhrase:"la batería en mi teléfono está muerta",module:"module 21",type:"words"},
+{english:"battery (aa, aaa)", spanish:"pila (f)",englishPhrase:"the toy doesn't work without batteries", spanishPhrase:"el juguete no funciona sin pilas",module:"module 21",type:"words"},
+{english:"worm, caterpillar", spanish:"gusano (m)",englishPhrase:"there's a caterpillar in the kitchen", spanishPhrase:"hay un gusano en la cocina",module:"module 21",type:"words"},
+{english:"nationality", spanish:"nacionalidad (f)",englishPhrase:"what is your nationality?", spanishPhrase:"¿cuál es tu nacionalidad?",module:"module 21",type:"words"},
+{english:"to register", spanish:"inscribirse",englishPhrase:"how do I register for the class?", spanishPhrase:"¿cómo me inscribo en la clase?",module:"module 21",type:"words"},
+{english:"adolescent", spanish:"adolescente (m/f)",englishPhrase:"they're all adolescents", spanishPhrase:"todos son adolescentes",module:"module 21",type:"words"},
+{english:"hunger", spanish:"hambre (f)",englishPhrase:"they were very hungry", spanishPhrase:"tenían mucha hambre",module:"module 21",type:"words"},
+{english:"speech", spanish:"discurso (m)",englishPhrase:"he gave a very long speech", spanishPhrase:"dio un discurso larguísimo",module:"module 21",type:"words"},
+{english:"to ride", spanish:"montar",englishPhrase:"she loves to ride horses", spanishPhrase:"le encanta montar a caballo",module:"module 21",type:"words"},
+{english:"bed", spanish:"cama (f)",englishPhrase:"we have to share a bed", spanishPhrase:"tenemos que compartir una cama",module:"module 21",type:"words"},
+{english:"offer", spanish:"oferta (f)",englishPhrase:"his offer wasn't acceptable", spanishPhrase:"su oferta no fue aceptable",module:"module 21",type:"words"},
+{english:"mixed", spanish:"mezclado/a",englishPhrase:"all the ingredients are mixed", spanishPhrase:"todos los ingredienes son mezclados",module:"module 21",type:"words"},
+{english:"smile", spanish:"sonrisa (f)",englishPhrase:"she has a beautiful smile", spanishPhrase:"tiene una bonita sonrisa",module:"module 21",type:"words"},
+{english:"driver", spanish:"conductor/a chofer (m/f)",englishPhrase:"it was the drivers fault", spanishPhrase:"el conductor tenía la culpa",module:"module 21",type:"words"},
+{english:"wire", spanish:"alambre (m)",englishPhrase:"first, we need to cut the wire", spanishPhrase:"primero necesitamos cortar el alambre",module:"module 21",type:"words"},
+{english:"respectful", spanish:"respetuoso/a",englishPhrase:"a very respectful young man", spanishPhrase:"un joven muy respetuoso",module:"module 21",type:"words"},
+{english:"circus", spanish:"circo (m)",englishPhrase:"my daughter loves the circus", spanishPhrase:"a mi hija le encanta el circo",module:"module 21",type:"words"},
+{english:"baby's crib, cradle", spanish:"cuna (f)",englishPhrase:"a new cradle for the baby", spanishPhrase:"una nueva cuna para el bebé",module:"module 21",type:"words"},
+{english:"juice", spanish:"jugo (m)",englishPhrase:"apple juice please", spanishPhrase:"jugo de manzana por favor",module:"module 21",type:"words"},
+{english:"generosity", spanish:"generosidad (f)",englishPhrase:"thank you for your generosity", spanishPhrase:"gracias por tu generosidad",module:"module 21",type:"words"},
+{english:"cream", spanish:"crema (f)",englishPhrase:"I like coffee with cream", spanishPhrase:"me gusta el café con crema",module:"module 21",type:"words"},
+{english:"crisis", spanish:"crisis (f)",englishPhrase:"a crisis in unemployment", spanishPhrase:"una crisis de desempleo",module:"module 21",type:"words"},
+{english:"to describe", spanish:"describir",englishPhrase:"I don't know how to describe it", spanishPhrase:"no sé cómo describirlo",module:"module 21",type:"words"},
+{english:"to discover", spanish:"descubrir",englishPhrase:"they discovered the reason why", spanishPhrase:"descubrieron la razón por la que",module:"module 21",type:"words"},
+{english:"energy", spanish:"energía (f)",englishPhrase:"young children have a lot of energy", spanishPhrase:"los niños pequeños tienen mucho energía",module:"module 21",type:"words"},
+{english:"perfectly", spanish:"perfectamente",englishPhrase:"you said it perfectly", spanishPhrase:"lo dijiste perfectamente",module:"module 21",type:"words"},
+{english:"benefit", spanish:"beneficio (m)",englishPhrase:"for the benefit of everyone", spanishPhrase:"para el beneficio de todos",module:"module 21",type:"words"},
+{english:"favor", spanish:"favor (m)",englishPhrase:"can you do me a favor?", spanishPhrase:"¿me puedes hacer un favor?",module:"module 21",type:"words"},
+{english:"to sing", spanish:"cantar",englishPhrase:"she sings much better than me", spanishPhrase:"ella canta mucho mejor que yo",module:"module 21",type:"words"},
+{english:"to oppose", spanish:"oponer",englishPhrase:"they are going to oppose the idea", spanishPhrase:"van a oponerse a la idea",module:"module 21",type:"words"},
+{english:"car", spanish:"carro (m) coche (m) auto (m)",englishPhrase:"I can't find my car", spanishPhrase:"no puedo encontrar mi coche",module:"module 21",type:"words"},
+{english:"official", spanish:"oficial",englishPhrase:"now it's official", spanishPhrase:"ahora es oficial",module:"module 21",type:"words"},
+{english:"collection", spanish:"colección (f)",englishPhrase:"an expensive collection of wines", spanishPhrase:"una colección de vinos caros",module:"module 21",type:"words"},
+{english:"to erase", spanish:"borrar",englishPhrase:"please don't erase that, it's important", spanishPhrase:"por favor no borres eso, es importante",module:"module 21",type:"words"},
+{english:"architect", spanish:"arquitecto/a",englishPhrase:"a famous architect", spanishPhrase:"un arquitecto famoso",module:"module 21",type:"words"},
+{english:"healthy", spanish:"saludable",englishPhrase:"a healthy meal", spanishPhrase:"una comida saludable",module:"module 21",type:"words"},
+{english:"reduction", spanish:"reducción (f)",englishPhrase:"a reduction in productivity", spanishPhrase:"una reducción de la productividad",module:"module 21",type:"words"},
+{english:"soup", spanish:"sopa (f)",englishPhrase:"homemade soups", spanishPhrase:"sopas caseras",module:"module 21",type:"words"},
+{english:"ocean", spanish:"océano (f)",englishPhrase:"the pacific ocean", spanishPhrase:"el océano pacifico",module:"module 21",type:"words"},
+{english:"homemade", spanish:"casero/a",englishPhrase:"homemade food is the best", spanishPhrase:"comida casera es lo mejor",module:"module 21",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1766,6 +1816,27 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"that is the exception to the rule", spanishPhrase:"esa es la excepción a la regla",module:"module 20",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"I think that the total price is fair", spanishPhrase:"creo que el precio total es justo",module:"module 20",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the drink has a sour taste", spanishPhrase:"la bebida tiene un sabor amargo",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the police described how the driver of the car survived the worst accident of the year", spanishPhrase:"la policía describió cómo el conductor del coche sobrevivió  al peor accidente del año",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he's in bed with a lot of pain, he doesn't have much energy today", spanishPhrase:"está en la cama con mucho dolor, no tiene mucho energía hoy",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he was hungry so she prepared him a homemade soup, mixed with a little cream", spanishPhrase:"tenía hambre así que le preparó una sopa casera, mezclada con un poco de crema",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the reduction of salt in your food has many healthy benefits", spanishPhrase:"la reducción de la sal en la comida tiene muchos beneficios saludables",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the offer was to sign an official document to oppose the project", spanishPhrase:"la ofreta era firmar un documento oficial para oponer el proyecto",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the architects house is by the ocean", spanishPhrase:"la casa del arquitecto está junto al océano",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they all sang perfectly at the dance", spanishPhrase:"todos cantaron perfectamente en el baile",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the note says what type of battery you need", spanishPhrase:"la nota dice que tipo de pila necesitas",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I love your smile", spanishPhrase:"me encanta tu sonrisa",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"his speech was too long", spanishPhrase:"su discurso fue demasiado largo",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a club for adolescents", spanishPhrase:"es un club para adolescentes",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"his generosity helped us during the crisis", spanishPhrase:"su generosidad nos ayudó durante la crisis",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the book is a collection of jokes", spanishPhrase:"el libro es una colección de chistes",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there are three wires that connect to the battery", spanishPhrase:"hay tres alambres que se conectan a la batería",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I discovered that he had erased all the files", spanishPhrase:"discubrí que había borrado todos los archivos",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the baby's juice was in her crib", spanishPhrase:"el jugo de la bebé estaba en su cuna",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they ride horses in the circus", spanishPhrase:"montan a caballos en el circo",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they did me a favor and registered me in the class", spanishPhrase:"me hicieron un favor y me inscribieron en la clase ",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they have a lot of pride in their nationality", spanishPhrase:"tienen mucho orgullo en su nacionalidad",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he wasn't respectful with them", spanishPhrase:"no era respetuoso con ellos",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there's a strange smell in the house", spanishPhrase:"hay un olor raro en la casa",module:"module 21",type:"phrases"},
     ],
     }
     }
