--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -1272,6 +1272,56 @@ SELECT {
 {english:"soup", spanish:"sopa (f)",englishPhrase:"homemade soups", spanishPhrase:"sopas caseras",module:"module 21",type:"words"},
 {english:"ocean", spanish:"océano (f)",englishPhrase:"the pacific ocean", spanishPhrase:"el océano pacifico",module:"module 21",type:"words"},
 {english:"homemade", spanish:"casero/a",englishPhrase:"homemade food is the best", spanishPhrase:"comida casera es lo mejor",module:"module 21",type:"words"},
+{english:"creator", spanish:"creador/a",englishPhrase:"anna is the creator of this project", spanishPhrase:"ana es la creadora de este proyecto",module:"module 22",type:"words"},
+{english:"guarantee", spanish:"garantía (f)",englishPhrase:"yes it comes with a 10 year guarantee", spanishPhrase:"sí, viene con una garantía de diez años",module:"module 22",type:"words"},
+{english:"limitation", spanish:"limitación (f)",englishPhrase:"it's a serious limitation", spanishPhrase:"es una limitación grave",module:"module 22",type:"words"},
+{english:"lip", spanish:"labio (m)",englishPhrase:"she cut her lip earlier today", spanishPhrase:"se cortó el labio hoy temprano",module:"module 22",type:"words"},
+{english:"to float", spanish:"flotar",englishPhrase:"it weighs too much to float", spanishPhrase:"pesa demasiado para flotar",module:"module 22",type:"words"},
+{english:"notebook", spanish:"cuaderno (m)",englishPhrase:"his notebook is full of ideas", spanishPhrase:"su cuaderno está lleno de ideas",module:"module 22",type:"words"},
+{english:"to verify", spanish:"verificar",englishPhrase:"they want to verify every transaction", spanishPhrase:"quieren verificar cada transación",module:"module 22",type:"words"},
+{english:"consultation", spanish:"consulta (f)",englishPhrase:"a consultation with a doctor", spanishPhrase:"una consulta con un médico",module:"module 22",type:"words"},
+{english:"personally", spanish:"personalmente",englishPhrase:"personally, I don't believe it's true", spanishPhrase:"personalmente, no creo que sea la verdad",module:"module 22",type:"words"},
+{english:"secret", spanish:"sercreto (m)",englishPhrase:"tell me your secret", spanishPhrase:"dime tu secreto",module:"module 22",type:"words"},
+{english:"to confess", spanish:"confesar",englishPhrase:"he's going to confess to the crime", spanishPhrase:"va a confesar al crimen",module:"module 22",type:"words"},
+{english:"theater", spanish:"teatro (m)",englishPhrase:"a beautiful theater in the city center", spanishPhrase:"un teatro bonito en el centro de la ciudad",module:"module 22",type:"words"},
+{english:"homework", spanish:"tarea (f)",englishPhrase:"haven't you done your homework yet?", spanishPhrase:"¿no has hecho tu tarea todavía?",module:"module 22",type:"words"},
+{english:"common", spanish:"común",englishPhrase:"it's not very common", spanishPhrase:"no es muy común",module:"module 22",type:"words"},
+{english:"to close", spanish:"cerrar",englishPhrase:"close the door behind you", spanishPhrase:"cierra la puerta detrás de ti",module:"module 22",type:"words"},
+{english:"to respond", spanish:"responder",englishPhrase:"I'm not going to respond to him", spanishPhrase:"no le voy a responder",module:"module 22",type:"words"},
+{english:"exit", spanish:"salida (f)",englishPhrase:"the exit is on your right", spanishPhrase:"la salida está a tu derecha",module:"module 22",type:"words"},
+{english:"bank", spanish:"banco (m)",englishPhrase:"which bank do you recommend?", spanishPhrase:"¿qué banco recomiendas?",module:"module 22",type:"words"},
+{english:"document", spanish:"documento (m)",englishPhrase:"these are important documents", spanishPhrase:"estos son documentos importantes",module:"module 22",type:"words"},
+{english:"friendship", spanish:"amistad (f)",englishPhrase:"our friendship is important to me", spanishPhrase:"nuestra amistad es importante para mí",module:"module 22",type:"words"},
+{english:"extreme", spanish:"extremo/a",englishPhrase:"no one was expecting such an extreme response", spanishPhrase:"nadie esperaba una reacción tan extrema",module:"module 22",type:"words"},
+{english:"dollar", spanish:"dólar (m)",englishPhrase:"1000 dollars", spanishPhrase:"mil dólares",module:"module 22",type:"words"},
+{english:"faithful", spanish:"fiel",englishPhrase:"a faithful friend is worth a lot", spanishPhrase:"un amigo fiel vale mucho",module:"module 22",type:"words"},
+{english:"pleasant", spanish:"agradable",englishPhrase:"a pleasant afternoon breeze", spanishPhrase:"una brisa agradable de la tarde",module:"module 22",type:"words"},
+{english:"unpleasant", spanish:"desagradable",englishPhrase:"it is an unpleasant situation", spanishPhrase:"es una sitación desagradable",module:"module 22",type:"words"},
+{english:"tranquility, peace, quiet", spanish:"tranquilidad (f)",englishPhrase:"I love the tranquility of this place", spanishPhrase:"me encanta la tranquilidad de este lugar",module:"module 22",type:"words"},
+{english:"to prohibit", spanish:"prohibir",englishPhrase:"it's prohibited to smoke here", spanishPhrase:"está probibido fumar aquí",module:"module 22",type:"words"},
+{english:"artificial", spanish:"artificial",englishPhrase:"artificial intelligence", spanishPhrase:"inteligencia artificial",module:"module 22",type:"words"},
+{english:"sport", spanish:"deporte (m)",englishPhrase:"do you enjoy sports?", spanishPhrase:"¿disfrutas de los deportes?",module:"module 22",type:"words"},
+{english:"to protest", spanish:"protestar",englishPhrase:"the street is closed because they are protesting", spanishPhrase:"la calle está cerrada porque están protestando",module:"module 22",type:"words"},
+{english:"salt", spanish:"sal (f)",englishPhrase:"don't put too much salt in the food", spanishPhrase:"no pongas demasiada sal en la comida",module:"module 22",type:"words"},
+{english:"pepper", spanish:"pimienta (f)",englishPhrase:"salt and pepper are on the table", spanishPhrase:"la sal y la pimienta están en la mesa",module:"module 22",type:"words"},
+{english:"to press", spanish:"presionar",englishPhrase:"first you press this button", spanishPhrase:"primero, presionas este botón",module:"module 22",type:"words"},
+{english:"hole, cavity", spanish:"hueco (m)",englishPhrase:"a huge hole in the road", spanishPhrase:"un hueco enorme en el camino",module:"module 22",type:"words"},
+{english:"crash", spanish:"choque (m)",englishPhrase:"on the way home I saw a crash", spanishPhrase:"de camino a casa vi un choque",module:"module 22",type:"words"},
+{english:"pale", spanish:"pálido/a",englishPhrase:"she looks extremely pale", spanishPhrase:"se ve extremadamente pálida",module:"module 22",type:"words"},
+{english:"to vote", spanish:"votar",englishPhrase:"we're going to vote today", spanishPhrase:"vamos a votar hoy",module:"module 22",type:"words"},
+{english:"to hate", spanish:"odiar",englishPhrase:"they're going to hate us!", spanishPhrase:"¡nos van a odiar!",module:"module 22",type:"words"},
+{english:"thorn", spanish:"espina (f)",englishPhrase:"a rose with shart thorns", spanishPhrase:"una rosa con espinas filosas",module:"module 22",type:"words"},
+{english:"dispute", spanish:"disputa (f)",englishPhrase:"a dispute between neighbors", spanishPhrase:"una disputa entre vecinos",module:"module 22",type:"words"},
+{english:"computer", spanish:"computadora (f)",englishPhrase:"someone stole my computer", spanishPhrase:"alguien robó mi computadora",module:"module 22",type:"words"},
+{english:"to tie a knot", spanish:"hacer un nudo",englishPhrase:"I tied a knot in the rope", spanishPhrase:"hice un nudo en la cuerda",module:"module 22",type:"words"},
+{english:"to be able to", spanish:"poder",englishPhrase:"I would like to be able to visit you", spanishPhrase:"me gustaría poder visitarte",module:"module 22",type:"words"},
+{english:"all, everything", spanish:"todo",englishPhrase:"he wants to keep everything", spanishPhrase:"quiere mantener todo",module:"module 22",type:"words"},
+{english:"road, path", spanish:"camino (m)",englishPhrase:"a long road ahead", spanishPhrase:"un camino largo por adelante",module:"module 22",type:"words"},
+{english:"to pick up", spanish:"recoger",englishPhrase:"I'm going to pick up my daughter", spanishPhrase:"voy a recoger a mi niña",module:"module 22",type:"words"},
+{english:"sky, heaven", spanish:"cielo (m)",englishPhrase:"the sky is blue", spanishPhrase:"el cielo es azul",module:"module 22",type:"words"},
+{english:"seated", spanish:"sentado/a",englishPhrase:"they're seated right over there", spanishPhrase:"están sentados justo por allá",module:"module 22",type:"words"},
+{english:"to clean", spanish:"limpiar",englishPhrase:"she never cleans her bedroom", spanishPhrase:"nunca limpia su recámara",module:"module 22",type:"words"},
+{english:"married", spanish:"casado/a",englishPhrase:"she's already married", spanishPhrase:"ya está casada",module:"module 22",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1837,6 +1887,38 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"they have a lot of pride in their nationality", spanishPhrase:"tienen mucho orgullo en su nacionalidad",module:"module 21",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"he wasn't respectful with them", spanishPhrase:"no era respetuoso con ellos",module:"module 21",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"there's a strange smell in the house", spanishPhrase:"hay un olor raro en la casa",module:"module 21",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"your homework is in the notebook", spanishPhrase:"tu tarea está en el cuaderno",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he was able to do his first knot", spanishPhrase:"pudo hacer su primer nudo",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's prohibited to do that here", spanishPhrase:"está prohibido hacer eso aquí",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"where can I exchange dollars?", spanishPhrase:"¿dónde puedo cambiar dólares?",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they have a very pleasant friendship", spanishPhrase:"tienen una amistad muy agradable",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he's going to confess a secret", spanishPhrase:"va a confesar un secreto",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he's a married man and very faithful to her", spanishPhrase:"es un hombre casado y muy fiel a ella",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it was an unpleasant experience", spanishPhrase:"fue una experiencia desagradable",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"how did the dispute turn out?", spanishPhrase:"¿cómo resultó la disputa?",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I hate to clean the house on Sunday's", spanishPhrase:"odio limpiar la casa en domingo",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a long road ahead", spanishPhrase:"un camino largo adelante",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she has to verify the document personally", spanishPhrase:"ella tiene que verificar el documento personalmente",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there's a one year guarantee with the computer", spanishPhrase:"hay una garantía de un año con la computadora",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she's the creator", spanishPhrase:"ella es la creadora",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"this theater is the most famous in the city", spanishPhrase:"este teatro es el más famoso en la ciudad",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he uses a lot of salt and pepper", spanishPhrase:"usa mucho la sal y la pimienta",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they're going to protest in order to pressure the government", spanishPhrase:"van a protestar para presionar al gobierno",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he was sitting there, looking at the sky", spanishPhrase:"estaba sentado allí, mirando el cielo",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I can't find the exit", spanishPhrase:"no puedo encontrar la salida",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"first, they will have to vote", spanishPhrase:"primero, tendrán que votar",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a rose has many thorns", spanishPhrase:"una rosa tiene muchas espinas",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there's a hole in the bucket", spanishPhrase:"hay un hueco en el cubo",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"tomorrow they should respond to the consultation we had", spanishPhrase:"mañana deberían responder a la consulta que tuvimos",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they are closed today because of the crash", spanishPhrase:"hoy están cerrados por el choque",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I love the tranquility here", spanishPhrase:"me encanta la tranquilidad aquí",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"artificial intelligence is very impressive", spanishPhrase:"la inteligencia artificial es muy impresionante",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"did you pick up all the toys?", spanishPhrase:"¿recogiste todos los jugetes?",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"what are the limitations?", spanishPhrase:"¿cuáles son las limitaciónes?",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he likes all the extreme sports", spanishPhrase:"le gustan todos los deportes extremos",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's common to see that here", spanishPhrase:"es común ver eso aquí",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he has pale lips", spanishPhrase:"tiene los labios pálidos",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it doesn't float very well", spanishPhrase:"no flota muy bien",module:"module 22",type:"phrases"},
     ],
     }
     }
